--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 			<div class="profile-user-settings">
 
-				<h1 class="profile-user-name">codespace_pets</h1>
+				<h1 class="profile-user-name">CodeSpace Pets</h1>
 
 				<button class="btn profile-edit-btn">Edit Profile</button>
 
@@ -61,10 +61,12 @@
 <main>
 
 	<div class="container">
+		 
 
 		<div class="gallery">
 
 			<div class="gallery-item" tabindex="0">
+				
 
 				<img src="./images/bailey.PNG" class="gallery-image" alt="">
 
